[package]

name = "compress"
version = "0.1.0"
authors = ["numb86 <16703337+numb86@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
brotli = "3.3.0"
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
